# rules-rust-link-fails-repro

./: WORKSPACE
cargo/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/remote/: BUILD.async-mutex-1.4.0.bazel  BUILD.async-stream-impl-0.3.2.bazel  BUILD.cached-0.25.1.bazel  BUILD.cached_proc_macro-0.6.2.bazel  BUILD.cached_proc_macro_types-0.1.0.bazel  BUILD.darling-0.13.0.bazel  BUILD.darling_core-0.13.0.bazel  BUILD.darling_macro-0.13.0.bazel  BUILD.either-1.6.1.bazel  BUILD.futures-util-0.3.17.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.h2-0.3.6.bazel  BUILD.hyper-0.14.13.bazel  BUILD.hyper-timeout-0.4.1.bazel  BUILD.ident_case-1.0.1.bazel  BUILD.mio-0.7.14.bazel  BUILD.prost-derive-0.8.0.bazel  BUILD.rand-0.8.4.bazel  BUILD.socket2-0.4.2.bazel  BUILD.tokio-1.8.0.bazel  BUILD.tokio-io-timeout-1.1.1.bazel  BUILD.tokio-stream-0.1.7.bazel  BUILD.tokio-util-0.6.8.bazel  BUILD.tonic-0.5.2.bazel  BUILD.tower-0.4.10.bazel  BUILD.tracing-0.1.29.bazel  BUILD.winapi-0.3.9.bazel
repro/: BUILD  my_lib.rs
